// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`types-task returns all the types (including nested) found in the app and outputs to JSON 1`] = `
Array [
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "components",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "controllers",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "helpers",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "initializers",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "instance-initializers",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "mixins",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "models",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "routes",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "services",
    "type": "summary",
  },
  Object {
    "count": 2,
    "data": Array [
      "2",
    ],
    "key": "templates",
    "type": "summary",
  },
]
`;

exports[`types-task returns all the types (including nested) found in the app and outputs to the console 1`] = `
"Ember Types

Types                 Count 
components            2     
controllers           2     
helpers               2     
initializers          2     
instance-initializers 2     
mixins                2     
models                2     
routes                2     
services              2     
templates             2     

"
`;

exports[`types-task returns all the types found in the app and outputs to JSON 1`] = `
Array [
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "components",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "controllers",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "helpers",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "initializers",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "instance-initializers",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "mixins",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "models",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "routes",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "services",
    "type": "summary",
  },
  Object {
    "count": 1,
    "data": Array [
      "1",
    ],
    "key": "templates",
    "type": "summary",
  },
]
`;

exports[`types-task returns all the types found in the app and outputs to the console 1`] = `
"Ember Types

Types                 Count 
components            1     
controllers           1     
helpers               1     
initializers          1     
instance-initializers 1     
mixins                1     
models                1     
routes                1     
services              1     
templates             1     

"
`;
